<resources>
    <string name="app_name">Simple Scoreboard</string>
    <string name="action_settings">Settings</string>
    <string name="top_score">0</string>
    <string name="bottom_score">1</string>
    <string name="top_button1">-1</string>
    <string name="top_button2">+10</string>
    <string name="bottom_button1">-1</string>
    <string name="bottom_button2">+10</string>
    <string name="reset_button">Reset</string>
    <string name="top_button0">+1</string>
    <string name="bottom_button0">+1</string>
    <string name="interstitial_trigger">"?"</string>
</resources>
